syntax="proto3"; 

package ex;

option go_package = "/Users/ivanantoshin/Desktop/FF/proto/ex.proto";

service EXS{
    rpc GetSingleInfo(SimpleRequest) returns (SimpleResponse) {}
    rpc GetStreamInfo(stream SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest{
    string name = 1;
    int32 age = 2;
}

message SimpleResponse{
    string name = 1;
}

